<resources>
    <string name="app_name">ESIFunds</string>
    <string name="title_activity_main">ESIFunds</string>
    <string name="action_settings">Settings</string>
    <string name="background_mono">Background image</string>
    <string name="logo_welcome">Logo</string>
    <string name="logo_login">Logo</string>
    <string name="logo_register">Logo</string>
    <string name="string_login" translatable="false">Login</string>
    <string name="string_register">Register</string>
    <string name="string_guest">Guest</string>
    <string name="string_username">Username</string>
    <string name="string_mail">E-Mail</string>
    <string name="string_password">Password</string>
    <string name="string_logout">Logout</string>
    <string name="string_login_register">Login/Register</string>
    <string name="string_favourites">Favourites</string>
    <string name="string_search">Search</string>
    <string name="string_opportunities_list">Opportunities List</string>
    <string name="string_firstname">First Name</string>
    <string name="string_lastname">Last Name</string>
    <string name="string_money_symbol">$</string>
    <string name="string_espiration_date">Expiration Date:</string>
    <string name="string_from">From:</string>
    <string name="string_to">To:</string>
    <string name="string_no_expiration">No expiration</string>
    <string name="string_theme">THEME</string>
    <string name="string_type">TYPE</string>
    <string name="string_map">Map</string>
    <string name="string_old_password">Old Password</string>
    <string name="string_new_password">New Password</string>
    <string name="string_login_register_action">Login or Register</string>
    <string name="string_advanced_search_theme">Theme</string>
    <string name="string_advanced_search_payee">Payee</string>
    <string name="string_advanced_search_location">Location</string>
    <string name="string_marker_snippet">Opportunities:</string>
    <string name="string_payee">PAYEE</string>
    <string name="placeholder_one_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque luctus eros justo, sit amet fringilla ligula euismod et. Sed ultricies tempus erat, quis placerat ante faucibus nec. Praesent ultrices risus tortor, sit amet volutpat tortor imperdiet vehicula. Duis auctor molestie justo, ut vestibulum eros blandit nec. In vel sem justo. Morbi et diam aliquet, vulputate nisi a, porttitor nisi. Sed luctus nulla at maximus ultricies. Nam cursus at enim nec luctus. Nulla vehicula quam mollis eros viverra, a ultrices libero mollis. Proin suscipit ornare tristique. Aliquam ornare dui vitae dolor fringilla pretium.</string>
    <string name="placeholder_two_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam venenatis pharetra dui ac sollicitudin. Mauris velit ipsum, sodales non justo et, fringilla dapibus ligula. Duis nec lorem in lorem facilisis suscipit sed quis nibh. Nulla viverra odio quis convallis placerat. Aliquam placerat mi eget tellus tincidunt aliquam. Vestibulum tincidunt turpis eget orci lacinia, ac cursus mi facilisis. Suspendisse hendrerit lacinia turpis, eu mollis nibh dapibus eget. Quisque suscipit finibus magna, et viverra leo ultrices ac. Curabitur lacinia nec turpis id mattis. Ut tellus metus, hendrerit quis rutrum non, mollis vel turpis.  Cras tempus arcu turpis. Nullam tristique ultrices erat, in viverra erat tristique sed. Morbi viverra orci scelerisque porttitor mollis. Fusce interdum gravida sem vel dignissim. Praesent congue nisi id magna porttitor pharetra. Etiam sit amet ante at arcu ullamcorper lobortis at a ligula. Aliquam erat volutpat. Proin suscipit finibus lobortis.</string>
    <string name="string_no_location">No Location Specified</string>
    <string name="string_advanced_search">ADVANCED SEARCH</string>
    <string name="string_successfully_updated">Successfully updated</string>
    <string name="string_invalid_password">Invalid password</string>
    <string name="string_please_enter_your_current_password">Please enter your current password</string>
    <string name="string_authentication_failed">Authentication failed</string>
    <string name="string_authentication_data">Insert E-Mail and Password</string>
    <string name="string_register_data">Missing data for registration process</string>
</resources>
