<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutFragmentSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esifunds.fragment.FragmentSearch">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayoutFragmentSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_search" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_favourites" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_map" />
    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/fragmentPlaceholderFragmentSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayoutFragmentSearch">

    </FrameLayout>
</RelativeLayout>
